--- a/src/components/ChartBox.css
+++ b/src/components/ChartBox.css
@@ -1,5 +1,25 @@
 .chartbox{
-    height: 100%;
+    height: 90%;
     background-color: #2a2828;
     border-radius: 1rem;
+}
+.buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 0.25rem;
+}
+
+.buttons button{
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 13px;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+}
+
+.active{
+    background-color: white !important;
+    color: black !important;
 }
